--- a/debian/control
+++ b/debian/control
@@ -1,18 +1,18 @@
-Source: miatoll-apt-config
+Source: adishatz-apt-config
 Maintainer: Cédric Bellegarde <cedric.bellegarde@adishatz.org>
 Section: misc
 Priority: optional
 Build-Depends: debhelper (>= 10)
 Standards-Version: 4.5.0.3
-Vcs-Browser: https://github.com/bellegarde-c/miatoll-apt-config
-Vcs-Git: https://github.com/bellegarde-c/miatoll-apt-config.git
+Vcs-Browser: https://github.com/bellegarde-c/adishatz-apt-config
+Vcs-Git: https://github.com/bellegarde-c/adishatz-apt-config.git
 
-Package: miatoll-apt-config
+Package: adishatz-apt-config
 Architecture: all
 Pre-Depends: apt
 Depends: ${misc:Depends}
-Breaks: hybris-mobian-apt-config (<< 10+git20210324000000)
-Replaces: hybris-mobian-apt-config (<< 10+git20210324000000)
+Breaks: hybris-mobian-apt-config (<< 10+git20210324000000), miatoll-apt-config
+Replaces: hybris-mobian-apt-config (<< 10+git20210324000000), miatoll-apt-config
 Description: APT configurations for Droidian
  This package contains various APT configurations and Pins
  for miatoll.
